[MODINVOICE-615]. Add ability to cancel an invoice after changing fund distribution in POL (#502)
* [MODINVOICE-615]. Add ability to cancel an invoice after changing fund distribution in POL

* [MODINVOICE-615]. Add more tests

* [MODINVOICE-615]. Add stricter encumbrance verification

* [MODINVOICE-615]. Apply review recommendations

* [MODINVOICE-615]. Update tests with await

* [MODINVOICE-615]. Increase await time

* [MODINVOICE-615]. Update tests

* [MODINVOICE-615]. Update tests